covers ui error fixed

--- a/widget/thread/style/containThread.css
+++ b/widget/thread/style/containThread.css
@@ -24,6 +24,7 @@
 .thread.list .cover{
     width: 50%;
     display: inline-block;
+    vertical-align: top;
     background-size: cover;
     height: 150px;
 }
